@@ -15,10 +15,10 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_read" eval="True"/>
             <field name="perm_write" eval="False"/>
         </record>
-        <record model="ir.model.field.access" id="access_party_supplier_tax_group_on_cash_basis_account_party">
+        <record model="ir.model.field.access" id="access_party_supplier_tax_group_on_cash_basis_account">
             <field name="model">party.party</field>
             <field name="field">supplier_tax_group_on_cash_basis</field>
-            <field name="group" ref="account.group_account_party"/>
+            <field name="group" ref="account.group_account"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_write" eval="True"/>
         </record>
