@@ -1,3 +1,4 @@
+* Replace Accounting Party by Accounting group
 
 Version 7.2.0 - 2024-04-29
 --------------------------
